fix (flexbox): Fix for vertical alignment on medium+ screens

--- a/style.css
+++ b/style.css
@@ -254,6 +254,8 @@ li.column-half {
 	.row {
 		display: flex;
 		flex-wrap: nowrap;
+		justify-content: normal;
+		align-items: normal;
 		max-width: 600px;
 		margin: 0 auto;
 	}
